--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
+    "cloudinary": "^1.33.0",
     "deta": "^1.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
